/videos/ center alignment bad logic correction

--- a/frontend/static/frontend/css/sections/videos.css
+++ b/frontend/static/frontend/css/sections/videos.css
@@ -58,7 +58,8 @@
 
 			#container
 			{
-				margin: 4em 2%;
+				text-align: center;
+				margin: 4em auto;
 			}
 
 			#wrapper
@@ -72,9 +73,8 @@
 
 				#wrapper > video
 				{
-					position: absolute;
-					height: 20em;
-					width: 30%;
+					height: 100%;
+					width: 100%;
 					z-index: 1;
 				}
 
@@ -105,7 +105,6 @@
 
 		#details > header
 		{
-			text-align: center;
 			text-shadow: 0 0 0.3px white;
 		}
 
